--- a/GitDev/GitDev/Scenes/DevDetails/DevProfileViewController.xib
+++ b/GitDev/GitDev/Scenes/DevDetails/DevProfileViewController.xib
@@ -17,7 +17,10 @@
                 <outlet property="followerLabel" destination="kpT-rE-z8H" id="Y3x-bg-Vsn"/>
                 <outlet property="followingLabel" destination="HPk-4U-foI" id="1cF-Qf-Qm9"/>
                 <outlet property="nameLabel" destination="Maf-T7-ioW" id="IaX-fX-zgX"/>
+                <outlet property="noteViewContainer" destination="NJf-OX-xI6" id="Ikx-iP-cgq"/>
                 <outlet property="notesTextView" destination="zYr-KR-vAf" id="Zbj-OH-afn"/>
+                <outlet property="notesTitleLabel" destination="Du5-Co-9LR" id="MtJ-qY-4OY"/>
+                <outlet property="saveButton" destination="KQ9-rK-UXE" id="Pio-aO-CCY"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -38,6 +41,9 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="179" id="gOJ-1s-Whw"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
                                 </imageView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="hex-DO-cfP">
                                     <rect key="frame" x="65.5" y="188" width="283" height="24"/>
@@ -47,12 +53,18 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers: 200" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPk-4U-foI">
                                             <rect key="frame" x="154.5" y="0.0" width="128.5" height="24"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
                                         </label>
                                     </subviews>
                                 </stackView>
@@ -68,6 +80,9 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="    " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dw4-JD-UFh">
                                                     <rect key="frame" x="0.0" y="29.5" width="366" height="21.5"/>
@@ -78,6 +93,9 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="    " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9uk-Bh-6q9">
                                                     <rect key="frame" x="0.0" y="59" width="366" height="21.5"/>
@@ -85,6 +103,9 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
                                             </subviews>
                                         </stackView>
@@ -111,12 +132,14 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Du5-Co-9LR">
                                                     <rect key="frame" x="0.0" y="0.0" width="377" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="377" id="8Hx-6K-h52"/>
                                                         <constraint firstAttribute="height" constant="21" id="aCG-Ss-01a"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zYr-KR-vAf">
                                                     <rect key="frame" x="0.0" y="29" width="377" height="102"/>
@@ -128,6 +151,9 @@
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </textView>
                                             </subviews>
                                         </stackView>
@@ -139,6 +165,9 @@
                                         <constraint firstAttribute="trailing" secondItem="x8G-oV-YuA" secondAttribute="trailing" constant="13" id="hhg-go-Kjv"/>
                                         <constraint firstItem="x8G-oV-YuA" firstAttribute="leading" secondItem="NJf-OX-xI6" secondAttribute="leading" constant="8" id="nHB-H1-61a"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KQ9-rK-UXE" customClass="ButtonDesign" customModule="GitDev" customModuleProvider="target">
                                     <rect key="frame" x="137" y="536" width="140" height="34"/>
